--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "skilline-website-main",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sivaainkaran/education.git"
