--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skilline-website-main",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
