--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x]  # You can remove others unless you want multi-version testing
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
       # Checkout code
@@ -34,11 +34,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Build Tailwind CSS
-      - name: Build Tailwind CSS
-        run: npm run tailwind:build
+      # Run tests
+      - name: Run tests
+        run: npm test
 
-      # Set up Docker Buildx
+      # Set up Docker Buildx (optional but good for performance/flexibility)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -46,15 +46,15 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.PASSWORD }}" | docker login -u ${{ secrets.USERNAME }} --password-stdin
 
-      # Build Docker image
+      # Build Docker image with commit SHA
       - name: Build Docker image
         run: docker build -t sainkaranak/project:${{ github.sha }} .
 
-      # Tag as latest
+      # Tag Docker image as latest
       - name: Tag image as latest
         run: docker tag sainkaranak/project:${{ github.sha }} sainkaranak/project:latest
 
-      # Push both tags
+      # Push Docker image (SHA and latest tags)
       - name: Push Docker image with SHA
         run: docker push sainkaranak/project:${{ github.sha }}
 
